/*
 * Copyright 2020, OpenTelemetry Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax="proto3";

package jaeger.api_v2;

import "google/api/annotations.proto";

option java_package = "io.opentelemetry.exporters.jaeger.proto.api_v2";

enum SamplingStrategyType {
  PROBABILISTIC = 0;
  RATE_LIMITING = 1;
};

message ProbabilisticSamplingStrategy {
  double samplingRate = 1;
}

message RateLimitingSamplingStrategy {
  int32 maxTracesPerSecond = 1;
}

message OperationSamplingStrategy {
  string operation = 1;
  ProbabilisticSamplingStrategy probabilisticSampling = 2;
}

message PerOperationSamplingStrategies {
  double defaultSamplingProbability = 1;
  double defaultLowerBoundTracesPerSecond = 2;
  repeated OperationSamplingStrategy perOperationStrategies = 3;
  double defaultUpperBoundTracesPerSecond = 4;
}

message SamplingStrategyResponse {
  SamplingStrategyType strategyType = 1;
  ProbabilisticSamplingStrategy probabilisticSampling = 2;
  RateLimitingSamplingStrategy rateLimitingSampling = 3;
  PerOperationSamplingStrategies operationSampling =4;
}

message SamplingStrategyParameters {
  string serviceName = 1;
}

service SamplingManager {
  rpc GetSamplingStrategy(SamplingStrategyParameters) returns (SamplingStrategyResponse) {
    option (google.api.http) = {
            post: "/api/v2/samplingStrategy"
            body: "*"
        };
  }
}
